--- a/src/CG.Business/CG.Business.csproj
+++ b/src/CG.Business/CG.Business.csproj
@@ -18,6 +18,7 @@ Platforms supported:
     <RepositoryUrl>https://github.com/CodeGator/CG.Business</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageIcon>packageDefaultIcon-50x50.png</PackageIcon>
+    <PackageIconUrl />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -26,10 +27,10 @@ Platforms supported:
 
   <ItemGroup>
     <PackageReference Include="CG.Configuration" Version="2021.2.3" />
-    <PackageReference Include="CG.Core" Version="2021.2.7" />
+    <PackageReference Include="CG.Core" Version="2021.2.9" />
     <PackageReference Include="CG.Options" Version="2021.4.10" />
     <PackageReference Include="CG.Reflection" Version="2021.2.7" />
-    <PackageReference Include="Nerdbank.GitVersioning" Version="3.4.194">
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.4.203">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
