--- a/src/CG.Business/CG.Business.csproj
+++ b/src/CG.Business/CG.Business.csproj
@@ -29,6 +29,7 @@ Platforms supported:
     <PackageReference Include="CG.Configuration" Version="2021.2.10" />
     <PackageReference Include="CG.Options" Version="2021.4.13" />
     <PackageReference Include="CG.Reflection" Version="2021.2.16" />
+    <PackageReference Include="CG.Runtime" Version="2021.2.7" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="3.4.216">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
