--- a/src/CG.Business/CG.Business.csproj
+++ b/src/CG.Business/CG.Business.csproj
@@ -1,66 +1,69 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>CG.Business</RootNamespace>
-    <Description>This package contains business related abstractions used by other CodeGator packages. 
+	<PropertyGroup>
+		<Nullable>enable</Nullable>
+		<TargetFramework>net6.0</TargetFramework>
+		<RootNamespace>CG.Business</RootNamespace>
+		<Description>
+			This package contains business related abstractions used by other CodeGator packages.
 
-Platforms supported:
-      .NET 6.x or above</Description>
-    <Company>CodeGator</Company>
-    <Authors>Martin Cook</Authors>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Copyright>Copyright © 2010 - 2022 by CodeGator.</Copyright>
-    <PackageProjectUrl>https://github.com/CodeGator/CG.Business</PackageProjectUrl>
-    <PackageTags>business, abstrations, CG.Busness, CodeGator</PackageTags>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <RepositoryUrl>https://github.com/CodeGator/CG.Business</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageIcon>packageDefaultIcon-50x50.png</PackageIcon>
-    <PackageIconUrl />
-  </PropertyGroup>
+			Platforms supported:
+			.NET 6.x or above
+		</Description>
+		<Company>CodeGator</Company>
+		<Authors>Martin Cook</Authors>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<Copyright>Copyright © 2010 - 2022 by CodeGator.</Copyright>
+		<PackageProjectUrl>https://github.com/CodeGator/CG.Business</PackageProjectUrl>
+		<PackageTags>business, abstrations, CG.Busness, CodeGator</PackageTags>
+		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+		<RepositoryUrl>https://github.com/CodeGator/CG.Business</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageIcon>packageDefaultIcon-50x50.png</PackageIcon>
+		<PackageIconUrl />
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\net6.0\CG.Business.xml</DocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DocumentationFile>bin\Debug\net6.0\CG.Business.xml</DocumentationFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CG.Configuration" Version="2022.1.2" />
-    <PackageReference Include="CG.Options" Version="2022.1.2" />
-    <PackageReference Include="CG.Reflection" Version="2022.1.3" />
-    <PackageReference Include="CG.Runtime" Version="2022.1.1" />
-    <PackageReference Include="Nerdbank.GitVersioning" Version="3.5.113">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="System.Text.Json" Version="6.0.6" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="CG.Configuration" Version="2022.1.2" />
+		<PackageReference Include="CG.Options" Version="2022.1.2" />
+		<PackageReference Include="CG.Reflection" Version="2022.1.3" />
+		<PackageReference Include="CG.Runtime" Version="2022.1.1" />
+		<PackageReference Include="Nerdbank.GitVersioning" Version="3.5.113">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="System.Text.Json" Version="6.0.6" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Include="..\..\packageDefaultIcon-50x50.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\..\packageDefaultIcon-50x50.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
-  <ItemGroup>
-    <Compile Update="Properties\Resources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Update="Properties\Resources.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Resources.resx</DependentUpon>
+		</Compile>
+	</ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Update="Properties\Resources.resx">
+			<Generator>ResXFileCodeGenerator</Generator>
+			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+	</ItemGroup>
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
-	</ItemGroup>	
+	</ItemGroup>
 
 </Project>
